--- a/bio.html
+++ b/bio.html
@@ -3,6 +3,7 @@
 
     <head>
         <title>Claudia's Bio</title>
+        <link rel="stylesheet" type="text/css" href="biostyle.css">
     </head>
 
     <body>
@@ -10,12 +11,12 @@
         <h2>Claudia Taylor</h2>
         <img src="beach.jpg" alt="Claudia" height="150px"/>
         <br />
-        <p>This si some stuff about me</p>
+        <p>This is some stuff about me</p>
         <h2>Contact Info</h2>
         <ul>
             <li><strong>Email</strong>: <a href="mailto:taylor.claudia@gmail.com">taylor.claudia@gmail.com</a></li>
-            <li><strong>Github</strong>: <a href="https://github.com/claudiact6">Here it is</a></li>
-            <li><strong>Portfolio</strong>: <a href="../Basic-Portfolio/portfolio.html">Check it out!</a></li>
+            <li><strong>Github</strong>: <a href="https://github.com/claudiact6" target="_blank">Here it is</a></li>
+            <li><strong>Portfolio</strong>: <a href="../Basic-Portfolio/portfolio.html" target="_blank">Check it out!</a></li>
         </ul>
 
     </body>
