--- a/bio.html
+++ b/bio.html
@@ -2,22 +2,31 @@
 <html>
 
     <head>
-        <title>Claudia's Bio</title>
+        <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="biostyle.css">
+        <title>Claudia's Bio</title>
     </head>
 
     <body>
-        <h1>My Bio</h1>
-        <h2>Claudia Taylor</h2>
-        <img src="beach.jpg" alt="Claudia" height="150px"/>
-        <br />
-        <p>This is some stuff about me</p>
-        <h2>Contact Info</h2>
-        <ul>
-            <li><strong>Email</strong>: <a href="mailto:taylor.claudia@gmail.com">taylor.claudia@gmail.com</a></li>
-            <li><strong>Github</strong>: <a href="https://github.com/claudiact6" target="_blank">Here it is</a></li>
-            <li><strong>Portfolio</strong>: <a href="../Basic-Portfolio/portfolio.html" target="_blank">Check it out!</a></li>
-        </ul>
+        <div class="menu">
+            <h1>My Bio</h1>
+        </div>
+        <div class="mainbody">
+            <div class="infopart">
+                <h2>Claudia Taylor</h2>
+                <img src="beach.jpg" alt="Claudia" height="150px"/>
+                <br />
+                <p>This is some stuff about me</p>
+            </div>  
+            <div class="contact">
+                <h2>Contact Info</h2>
+                <ul>
+                    <li><strong>Email</strong>: <a href="mailto:taylor.claudia@gmail.com">taylor.claudia@gmail.com</a></li>
+                    <li><strong>Github</strong>: <a href="https://github.com/claudiact6" target="_blank">Here it is</a></li>
+                    <li><strong>Portfolio</strong>: <a href="../Basic-Portfolio/portfolio.html" target="_blank">Check it out!</a></li>
+                </ul>
+            </div>
+        </div>
 
     </body>
 </html>
